# app

./: .gitignore  pyproject.toml  requirements.txt
cart/: cart.py  forms.py  views.py
cart/templates/cart/: detail.html
coupons/: models.py
coupons/migrations/: 0001_initial.py
myshop/: settings.py  urls.py
orders/: admin.py  models.py  tasks.py  urls.py  views.py
orders/migrations/: 0001_initial.py
orders/templates/admin/orders/order/: detail.html
orders/templates/orders/order/: create.html  created.html  pdf.html
payment/: tasks.py  views.py  webhooks.py
payment/templates/payment/: process.html
shop/: recommender.py  views.py
shop/migrations/: 0001_initial.py
shop/templates/shop/: base.html
shop/templates/shop/product/: detail.html  list.html
