[tool.poetry]
name = "myshop"
version = "1"
description = "dev"
authors = ["Vitalii"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.6"
django = "^4.2.3"
django-environ = "^0.10.0"
redis = "^4.6.0"
celery = "^5.3.1"
stripe = "^5.4.0"
sqlparse = "^0.4.4"
pillow = "^10.0.0"
psycopg2 = "^2.9.6"
ipython = "^8.14.0"
weasyprint = "^59.0"
django-redis = "^5.3.0"
django-storages = {extras = ["google"], version = "^1.13.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
